--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,5 +6,8 @@
     <li class="nav-item active">
       <a class="nav-link" routerLink="/dispstud">View</a>
     </li>
+    <li class="nav-item active">
+      <a class="nav-link" routerLink="/searchstud">Search</a>
+    </li>
   </ul>
 </nav>
